--- a/style.css
+++ b/style.css
@@ -243,6 +243,12 @@ nav > ul> li> a, .follow a{
     display: flex;
     gap:30px;   
 }
+.types-of-game .card:hover{
+    border: 1px solid #FF42A5 ;
+    border-radius: 30px;
+    color:#FF42A5;
+    
+}
 .upper-list{
     display: flex;
     justify-content: space-evenly;
